# origindevtools

./: .gitignore  README.md  code.or  fmt.py  main.py  pyproject.toml  replace.py  test.py
origin/: classes.py  errors.py  interpreter.py  lexer.py  parser.py
origin_cli/: __init__.py  classes.py  config.py  console.py  folder_gen.py  handle_java.py  handle_origin.py  handle_python.py  install_lang.py  interpret.py  lexer.py  main.py  manus_CLI.py  parser.py  plugin_loader.py  structure.otxt  structure.txt  utils.py
origin_cli/tools/: __init__.py  bench.py  config_tool.py  create.py  deps.py  diff.py  docs.py  env.py  fmt.py  git_tools.py  lint.py  migrate.py  plugin_cmd.py  repl.py  snippet.py  test_runner.py  watch.py
origin_devtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
random/: CLAUDE.md  LICENSE  folder_tool.py  pyproject.toml
